Fix text align and container paddings for tablet and deskstop

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -3,7 +3,9 @@
 }
 
 .experience-container {
-    padding: 0 64px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .experience-title {
@@ -21,6 +23,7 @@
     font-size: 18px;
     line-height: 1.5;
     color: #0b0803;
+    text-align: center;
     margin-bottom: 32px;
 }
 
@@ -46,6 +49,10 @@
 }
 
 @media screen and (min-width: 768px) {
+    .experience-container {
+        padding: 0 32px;
+    }
+
     .experience-list {
         flex-direction: row;
         flex-wrap: wrap;
@@ -59,6 +66,10 @@
 }
     
 @media screen and (min-width: 1440px) {
+    .experience-container {
+        padding: 0 64px;
+    }
+
     .experience-title {
         font-size: 48px;
     }
